     10- make galoissubcyclo compatible with znstar(,1)
     11- idealfactor(nfinit(polcyclo(5)),2^4*[0,1,0,0]~,100) => SEGV
     12- idealredmodpower(nf,x,...) incorrect when x a t_INT or t_FRAC
     13- znchargauss(,,a != 1): wrong value (missing \bar{chi}(a))
     14- factorpadic(): wrong results when p-adic accuracy too low
     15- elleisnum([1,I/2^100],4) -> exponent overflow

  Changed
      1- polcoeff is deprecated and renamed polcoef: it now only applies
         to scalars, polynomials, series and rational functions; no longer to
         vector/matrices or quadratic forms (use [] or "component").
      2- [libpari] rename polcoeff0 -> polcoef, polcoeff_i -> polcoef_i,
         truecoeff -> truecoef
      3- t_LIST corrupted on writebin / read [#2040]
      4- add optional argument to denominator/content/numerator to allow
         better control over semantic. E.g.
         No arg:  denominator([1/2, 1/x, 1/y]) -> 2*y*x
                  denominator([1/2, 1/x, x/y]) -> 2*x
                  denominator([x/2, 1/x, 1/y]) -> y*x
         With arg: denominator(,1) is 2 in all 3 cases
                   denominator(,x) is x in all 3 cases
                   denominator(,y) is y in all 3 cases
      5- factor(t_RFRAC): sort factors by increasing degree
      6- [libpari] rename constant LOG2 -> M_LN2 (from math.h if available)
      7- ellweilcurve: allow input in ellisomat form
      8- [libpari] rnf_get_nfzk / nf_nfzk / nfeltup interface (czknf was
         useless, return and use nfzk)
      9- the rnf struct from rnfinit has changed, the new format is not
         compatible with pari-2.9

  Added
      1- [libpari] denom_i, numer_i, conj_i
BA    2- [libpari] Fp_pow_init, Flxq_pow_init, F2xq_pow_init
                   Fp_pow_table, Flxq_pow_table, F2xq_pow_table
                   gen_pow_init, gen_pow_table
      3- new GP function serchop
      4- [libpari] serchop_i
BA    5- [libpari] hash_init_GEN, hash_haskey_long, hash_insert_long